--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -158,7 +158,7 @@ main section:nth-child(even) {
   z-index: 1;
   bottom: -200px;
   margin-top: -200px;
-  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
+  filter: drop-shadow(0px 16px 32px rgba(0 0 0 / 15%));
 }
 
 /*NAVIGATION*/
@@ -187,7 +187,6 @@ main section:nth-child(even) {
   font-size: 64px;
   line-height: 1;
   font-family: 'Neucha', sans-serif;
-  color: var(--primary-dark);
 }
 
 .card:hover {
@@ -208,6 +207,8 @@ main section:nth-child(even) {
 
 #navigation .flex-columns {
   flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 20px;
 }
 
 /*MAIN SECTIONS*/
@@ -347,6 +348,10 @@ input::placeholder {
   background-color: var(--primary);
   border: none;
   cursor: pointer;
+}
+
+.send:hover {
+  background-color: var(--button-hover);
 }
 
 .send::before {
