--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,16 +8,16 @@
   --dark-transparent: #908d8b;
   --brown: #b09a81;
   --blue: #1085c5;
-  --button-hover: #EA7600;
+  --button-hover: #ea7600;
 }
 
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   src: url("../Fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf");
 }
 
 @font-face {
-  font-family: 'Neucha';
+  font-family: Neucha;
   src: url("../Fonts/Neucha/Neucha-Regular.ttf");
 }
 
@@ -29,16 +29,19 @@ body {
   margin: 0;
   font-size: 16px;
   line-height: 1.6em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: var(--dark);
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   line-height: 1.2em;
   font-weight: 400;
-  font-family: 'Neucha', sans-serif;
+  font-family: Neucha, sans-serif;
   color: var(--primary);
 }
 
@@ -75,7 +78,7 @@ h4 {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(../images/background.png);
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   content: "";
@@ -103,7 +106,7 @@ main section:nth-child(even) {
   gap: 30px;
 }
 
-/*HEADER*/
+/* HEADER */
 #header-section {
   background-color: var(--light);
 }
@@ -143,7 +146,7 @@ main section:nth-child(even) {
   background-color: var(--button-hover);
 }
 
-/*VIDEO*/
+/* VIDEO */
 #video-section h2 {
   text-align: center;
 }
@@ -161,7 +164,7 @@ main section:nth-child(even) {
   filter: drop-shadow(0px 16px 32px rgba(0 0 0 / 15%));
 }
 
-/*NAVIGATION*/
+/* NAVIGATION */
 #navigation {
   padding-top: 100px;
   background-color: var(--primary-dark);
@@ -186,7 +189,7 @@ main section:nth-child(even) {
   padding-bottom: 40px;
   font-size: 64px;
   line-height: 1;
-  font-family: 'Neucha', sans-serif;
+  font-family: Neucha, sans-serif;
 }
 
 .card:hover {
@@ -211,14 +214,14 @@ main section:nth-child(even) {
   row-gap: 20px;
 }
 
-/*MAIN SECTIONS*/
+/* MAIN SECTIONS */
 .section-img {
   filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 .effect-info {
   font-weight: 400;
-  font-family: 'Neucha', sans-serif;
+  font-family: Neucha, sans-serif;
 }
 
 .cognitive-biases {
@@ -252,13 +255,13 @@ h5 {
   font-size: 14px;
   line-height: 1.2em;
   font-weight: bold;
-  font-family:'Open Sans', sans-serif;
+  font-family:"Open Sans", sans-serif;
   text-transform: uppercase;
   color: var(--white);
   background-color: var(--brown);
 }
 
-/*BROWN BACKGROUND*/
+/* BROWN BACKGROUND */
 .brown .cognitive-biases {
   color: var(--white-transparent);
 }
@@ -280,7 +283,7 @@ h5 {
   color: var(--white);
 }
 
-/*FOOTER*/
+/* FOOTER */
 
 .subscribe {
   display: flex;
@@ -313,7 +316,7 @@ label {
 input::placeholder {
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
-  color: #E3E3E3;
+  color: #e3e3e3;
 }
 
 .agreement {
@@ -330,8 +333,9 @@ input::placeholder {
   font-size: 14px;
   text-align: center;
 }
+
 .contacts a {
-  color: #007DC1;
+  color: #007dc1;
 }
 
 .email-and-button {
@@ -361,5 +365,5 @@ input::placeholder {
   height: 20px;
   width: 20px;
   display: block;
-  content: url(../images/send.svg);
+  content: url("../images/send.svg");
 }
