--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -60,7 +60,7 @@ h3 {
 h4 {
   font-size: 24px;
 }
- 
+
 .width-1110 {
   position: relative;
   max-width: 1110px;
@@ -151,6 +151,15 @@ main section:nth-child(even) {
   text-align: center;
 }
 
+.subscribe h3 {
+  padding: 55px;
+  padding-right: 122px;
+}
+
+.card:hover p {
+  color: var(--white);
+}
+
 #video-section p {
   margin: 30px 0;
   text-align: center;
@@ -161,7 +170,7 @@ main section:nth-child(even) {
   z-index: 1;
   bottom: -200px;
   margin-top: -200px;
-  filter: drop-shadow(0px 16px 32px rgba(0 0 0 / 15%));
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
 /* NAVIGATION */
@@ -204,10 +213,6 @@ main section:nth-child(even) {
   color: var(--white);
 }
 
-.card:hover p {
-  color: var(--white);
-}
-
 #navigation .flex-columns {
   flex-wrap: wrap;
   justify-content: space-between;
@@ -216,7 +221,7 @@ main section:nth-child(even) {
 
 /* MAIN SECTIONS */
 .section-img {
-  filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 15%));
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
 }
 
 .effect-info {
@@ -289,11 +294,6 @@ h5 {
 .subscribe {
   display: flex;
   background-color: var(--primary-dark);
-}
-
-.subscribe h3 {
-  padding: 55px;
-  padding-right: 122px;
 }
 
 .form {
