--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -221,7 +221,7 @@ main section:nth-child(even) {
 
 /* MAIN SECTIONS */
 .section-img {
-  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
 .effect-info {
